# universal_llm_agent

./: .env  README.md  pyproject.toml
agent/: embeddings.py  llm.py  service.py
backend/: main.py
core/: __init__.py  config.py  models.py
crawler/: service.py
executor/: __init__.py  service.py
frontend/: app.js  index.html  styles.css
kb/: __init__.py  storage.py
web_agent_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
