[project]
name = "web-agent-generator"
version = "0.1.0"
description = "Prototype generator of web agents from a single site URL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "playwright>=1.55.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "beautifulsoup4>=4.13.0",
  "lxml>=6.0.0",
  "python-multipart>=0.0.20",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "core",
  "crawler",
  "kb",
  "agent",
  "executor",
  "backend",
]
